--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "leaflet": "^1.7.1",
+    "dotenv": "^8.2.0",
+    "mapbox-gl": "^2.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
-    "react-leaflet": "^3.0.0",
+    "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.0",
+    "sass": "^1.30.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
