--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whats_my_ip",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -8,12 +8,11 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "mapbox-gl": "^2.0.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.0",
     "sass": "^1.30.0",
@@ -44,6 +43,14 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.5.19"
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "prettier": "^2.2.1"
   }
 }
