--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whats_my_ip",
+  "name": "where_am_i",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
@@ -9,10 +9,10 @@
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
-    "mapbox-gl": "^2.0.0",
+    "mapbox-gl": "^1.13.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.0",
     "sass": "^1.30.0",
