--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "mapbox-gl": "^1.13.0",
     "react": "^17.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.0",
+    "react-spinners": "^0.10.2",
     "sass": "^1.30.0",
     "web-vitals": "^0.2.4"
   },
