--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
   "env": {
-    "node": true,
     "browser": true,
     "es2021": true
   },
@@ -14,7 +13,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "no-unused-vars": "off",
-    "react/prop-types": "off"
+    "react/prop-types": [0],
+    "react/react-in-jsx-scope": [0]
   }
 }
