--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
-    "semi": false,
-    "singleQuote": true,
-    "tabWidth": 2
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "quoteProps": "as-needed"
 }
