Fix: eslint, prettier & typescript errors

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
   "semi": false,
+  "tabWidth": 2,
+  "printWidth": 100,
   "singleQuote": true,
-  "jsxSingleQuote": true,
-  "quoteProps": "as-needed"
+  "trailingComma": "none",
+  "jsxBracketSameLine": true
 }
