--- a/package.json
+++ b/package.json
@@ -8,17 +8,13 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
     "mapbox-gl": "^1.13.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.3",
     "react-spinners": "^0.10.2",
-    "sass": "^1.30.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -56,8 +52,8 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.4.1",
+    "typescript": "^4.4.4",
     "undefined": "^0.1.0"
   }
 }
