--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.3",
-    "react-spinners": "^0.10.2",
+    "react-spinners": "^0.10.6",
+    "sass": "^1.48.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
